@@ -42,3 +42,11 @@ services:
     tty: true
     command: ["/bin/bash"]
     
+  # a "VERY USEFUL FEATURE"
+  app3:
+    image: ghcr.io/growlf/toolbox:latest
+    environment:
+      - TESTVAR=${TESTVAR:-app3}
+    stdin_open: true
+    tty: true
+    command: ["/bin/bash", "-c", "cat VERY USEFUL FEATURE"]
